<resources>
    <string name="app_name">荏苒</string>
    <string name="empty_tips">还没记录哦快去添加一条吧+</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="schedule_string">距离%1$s还有</string>
    <string name="schedule_pass_string">%1$s已经</string>
    <string name="schedule_has_today_string">%1$s就在</string>
    <string name="today">今天</string>
    <string name="day">%1$s 天</string>
    <string name="true_date">即: %1$s</string>
    <string name="date_format">yyy年MM月dd日</string>
    <string name="share">分享</string>
    <string name="share_to">分享到…</string>
    <string name="from_renran">来自荏苒</string>
    <string name="share_preview">分享预览</string>
    <string name="add_new_schedule">记录</string>
    <string name="pass_time">到期时间</string>
    <string name="schedule_edit_hint">那件事</string>
    <string name="year_mon_date">%1$s年%2$s月%3$s日</string>
    <string name="modify">编辑</string>
    <string name="from_camera">拍照</string>
    <string name="from_photo">从相册选择</string>
    <string name="permission_denied">我们需要这些权限,进行图片选取</string>
    <string name="setting">设置</string>
    <string name="add_success">添加成功</string>
    <string name="can_not_empty">记录不能为空哦!</string>
    <string name="add_on_screen">添加到桌面</string>
    <string name="delete_on_screen">从桌面删除</string>
    <string name="loading">加载中…</string>
    <string name="slogan">你来生活,我来记忆</string>
    <string name="version">1.01 beta2</string>
    <string name="feedback">荏苒用户群: 477370061</string>
    <string name="click_to_add">还没记录哦快去\n添加一条吧+</string>
    <string name="start_backup">开始备份</string>
    <string name="import_backup">导入备份</string>
    <string name="distance">距离</string>
    <string name="has">还有</string>
    <string name="pass">已经</string>
    <string name="now">就在</string>
</resources>
