<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:contentPadding="10dp"
        android:layout_margin="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/no_image_item_back_ground"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:orientation="vertical"
                android:layout_marginTop="48dp">

                <TextView
                    android:id="@+id/tv_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/tv_schedule_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:maxEms="8"
                    android:textColor="@android:color/black"
                    android:textSize="64sp" />
                <TextView
                    android:id="@+id/tv_has_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/has"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />
                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/tv_true_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>


            <Button
                android:id="@+id/btu_share"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/share_button_round"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/share" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
