<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relative_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.aidchow.renran.ui.CircleImageView
                android:id="@+id/image_of_schedule"
                android:layout_width="256dp"
                android:layout_height="256dp"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:src="@drawable/logo"
                app:civ_border_overlay="true" />


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp">

                <TextView
                    android:id="@+id/tv_schedule_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/schedule_string"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/tv_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_schedule_text"
                    android:layout_centerHorizontal="true"
                    android:text="@string/day"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_true_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal" />

            <Button
                android:id="@+id/btu_share"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/share_button_round"
                android:text="@string/share" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>
